syntax = "proto3";

package order;

message Order {
    message OrderItem {
        string code = 1;
        string name = 2;
        float unit_price = 3;
        int32 quantity = 4;
    }
    string id = 1;
    string status = 2;
    int64 created_on = 3;
    repeated OrderItem order_items = 4;
}
